--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -2,8 +2,7 @@ name: SonarQube Scan
 
 on:
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   pull_request:
 
 jobs:
@@ -13,29 +12,20 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0   # required for correct analysis
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: "3.10"
 
       - name: Install dependencies
         run: |
           pip install -r requirements.txt || true
 
-      - name: Download Sonar Scanner
-        run: |
-          wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-6.2.1.4610-linux-x64.zip
-          unzip sonar-scanner-6.2.1.4610-linux-x64.zip
-          mv sonar-scanner-6.2.1.4610-linux-x64 sonar-scanner
-
       - name: Run SonarQube Scan
+        uses: sonarsource/sonarqube-scan-action@v2.0.2
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          sonar-scanner/bin/sonar-scanner \
-            -Dsonar.projectKey=my-python-project \
-            -Dsonar.sources=. \
-            -Dsonar.language=py \
-            -Dsonar.host.url=http://<YOUR_VM_PUBLIC_IP>:9000 \
-            -Dsonar.login=$SONAR_TOKEN
+          SONAR_HOST_URL: http://<YOUR_VM_PUBLIC_IP>:9000
