--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -15,17 +15,8 @@ jobs:
         with:
           fetch-depth: 0   # required for correct analysis
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
-
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt || true
-
       - name: Run SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@v2.0.2
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: http://136.111.101.21:9000
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
