--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -13,7 +13,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0   # required for correct analysis
+          fetch-depth: 0 
 
       - name: Run SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@v2.0.2
