--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -20,7 +20,15 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
-      - name: Send email on SonarQube failure
+
+      - name: SonarQube Quality Gate check
+        uses: sonarsource/sonarqube-quality-gate-action@v1.1.0
+        timeout-minutes: 5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+
+      - name: Send email on Sonar failure
         if: failure()
         uses: dawidd6/action-send-mail@v3
         with:
@@ -28,11 +36,11 @@ jobs:
           server_port: ${{ secrets.SMTP_PORT }}
           username: ${{ secrets.SMTP_USERNAME }}
           password: ${{ secrets.SMTP_PASSWORD }}
-          subject: ❌ SonarQube Scan Failed
+          subject: "❌ SonarQube Scan Failed - ${{ github.repository }}"
           to: ${{ secrets.MAIL_TO }}
           from: ${{ secrets.MAIL_FROM }}
           body: |
-            SonarQube scan FAILED ❌
+            SonarQube Quality Gate FAILED ❌
 
             Repository: ${{ github.repository }}
             Branch: ${{ github.ref_name }}
@@ -42,4 +50,4 @@ jobs:
             ${{ secrets.SONAR_HOST_URL }}/dashboard?id=my-python-test-app
 
             GitHub Workflow:
-            ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+            https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}
