test 3 new workflow with dynemic mail CC and PROJECT_KEY

--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -110,4 +110,4 @@ jobs:
             Status     : ${{ job.status }}
 
             SonarQube Dashboard:
-            ${{ secrets.SONAR_HOST_URL }}/dashboard?id=<PROJECT_KEY>
+            ${{ secrets.SONAR_HOST_URL }}/dashboard?id=${{ secrets.PROJECT_KEY }}
