Add conditional execution for email recipient retrieval in Sonar workflow

--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -29,6 +29,7 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
       - name: Get email recipient
+        if: always()
         id: email
         run: |
         
