--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=my-python-project
-sonar.projectName=My Python Test App
+sonar.projectName=My Python Test Git
 sonar.sources=.
 sonar.language=py
