--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=my-python-git
-sonar.projectName=My Python Test Git
+sonar.projectName=My Python Test copy
 sonar.sources=.
 sonar.language=py
