--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,3 @@
-sonar.projectKey=my-python-git
-sonar.projectName=My Python Test copy
+sonar.projectKey=sonar-test
+sonar.projectName=sonar test 
 sonar.sources=.
-sonar.language=py
